alteração + responsividade no cabeçalho

--- a/html e css/index.html
+++ b/html e css/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>VIA VALE SISTEMAS - Aparecida SP</title>
   <link rel="stylesheet" href="estilo.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
@@ -25,7 +25,22 @@
       <li onclick="scrollToSection('scroll3')" href="#">ENDEREÇO</li>
       <li onclick="scrollToSection('scroll4')" href="#">NOSSOS SERVIÇOS</li>
     </ul>
-    <div id="contato" onclick="scrollToSection('div5')">CONTATE-NOS</div>
+    <div id="contato" onclick="scrollToSection('div5')" >CONTATE-NOS</div>
+
+    <div id ="dropdown" class="btn-group">
+      <button type="button" id="botaocabecalho" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+        ⚙️
+      </button>
+      <ul class="dropdown-menu dropdown-menu-end">
+        <li><button class="dropdown-item" type="button">QUEM SOMOS</button></li>
+        <li><button class="dropdown-item" type="button">NOSSA EQUIPE</button></li>
+        <li><button class="dropdown-item" type="button">ENDEREÇO</button></li>
+        <li><button class="dropdown-item" type="button">NOSSOS SERVIÇOS</button></li>
+        <li><button class="dropdown-item" type="button">CONTATO</button></li>
+      </ul>
+    </div>
+    </div>
+
   </header>
  
 <!-- CARROSSEL -->
