responsividade da parte "quemsomos" alterada

--- a/html e css/index.html
+++ b/html e css/index.html
@@ -32,11 +32,11 @@
         ⚙️
       </button>
       <ul class="dropdown-menu dropdown-menu-end">
-        <li><button class="dropdown-item" type="button">QUEM SOMOS</button></li>
-        <li><button class="dropdown-item" type="button">NOSSA EQUIPE</button></li>
-        <li><button class="dropdown-item" type="button">ENDEREÇO</button></li>
-        <li><button class="dropdown-item" type="button">NOSSOS SERVIÇOS</button></li>
-        <li><button class="dropdown-item" type="button">CONTATO</button></li>
+        <li onclick="scrollToSection('scroll1')" href="#"><button class="dropdown-item" type="button">QUEM SOMOS</button></li>
+        <li onclick="scrollToSection('scroll2')" href="#"><button class="dropdown-item" type="button">NOSSA EQUIPE</button></li>
+        <li onclick="scrollToSection('scroll3')" href="#"><button class="dropdown-item" type="button">ENDEREÇO</button></li>
+        <li onclick="scrollToSection('scroll4')" href="#"><button class="dropdown-item" type="button">NOSSOS SERVIÇOS</button></li>
+        <li ><button class="dropdown-item" type="button">CONTATO</button></li>
       </ul>
     </div>
     </div>
@@ -84,11 +84,10 @@
   <main>
   <section id="quemsomos">
     <h1 class="qm">QUEM SOMOS </h1><br>
-    <p class="texto">A equipe Via Vale Sistemas tem por função Lorem ipsum dolor sit amet consectetur adipisicing elit.
-      Rerum vel earum placeat praesentium quia nesciunt? Laboriosam commodi quidem vero illo fuga, iure consequatu Lorem
-      ipsum, dolor sit amet consectetur adipisicing elit. Modi iste optio quidem nam, odit molestiae porro nostrum, nisi
-      explicabo libero non natus inventore quis ratione voluptatum reprehenderit dolorem id vero?</p><br>
-    <img class="imgqmsomos" src="/imagens/logo_vvs.png">
+    <p class="texto">Nossa equipe é formada por um compromisso inabalável: potencializar o sucesso de empresas por meio da tecnologia. Acreditamos firmemente que a automação inteligente é a chave para a transformação dos negócios e estamos dedicados a tornar isso uma realidade para empresas de todos os portes. Com um foco incansável na eficiência, experiência do cliente e simplificação de processos complexos, nosso objetivo é ajudar as empresas a prosperar em um mundo digital em constante evolução.</p><br>
+      <figure id="imgqmsomos">
+    <img src="\imagens\logo_vvs_2.png">
+      </figure>
   </section>
 
 
