responsividade em "nossa equipe" e "endereço"

--- a/html e css/index.html
+++ b/html e css/index.html
@@ -84,7 +84,7 @@
   <main>
   <section id="quemsomos">
     <h1 class="qm">QUEM SOMOS </h1><br>
-    <p class="texto">Nossa equipe é formada por um compromisso inabalável: potencializar o sucesso de empresas por meio da tecnologia. Acreditamos firmemente que a automação inteligente é a chave para a transformação dos negócios e estamos dedicados a tornar isso uma realidade para empresas de todos os portes. Com um foco incansável na eficiência, experiência do cliente e simplificação de processos complexos, nosso objetivo é ajudar as empresas a prosperar em um mundo digital em constante evolução.</p><br>
+    <p class="texto">Seja muito bem-vindo à nossa empresa, referência em otimização de negócios.<br> Desde nossa fundação, temos nos empenhado em simplificar e aprimorar a sua jornada empresarial. Especializados em sistemas de automatização, oferecemos soluções completas e práticas, incluindo venda de sistemas SAT, NFe e CFe, além de serviços de certificação digital para garantir a segurança das suas transações. Nossa missão é clara: impulsionar o seu sucesso por meio de eficiência, confiabilidade e resultados tangíveis. Ao escolher nossa parceria, você está optando por simplificar processos, maximizar resultados e trilhar um caminho empresarial mais promissor.</p><br>
       <figure id="imgqmsomos">
     <img src="\imagens\logo_vvs_2.png">
       </figure>
@@ -96,38 +96,46 @@
   <div class="linha" id="div2"></div>
 
   <section id="nossaequipe">
-    <p class="ne">NOSSA EQUIPE</p>
-    <div id="imagens">
-      <div class="fileira1">
-        <div class="person">
-          <img class="pessoa" id="p1" src="/imagens/pauloH.PNG">
-          <figcaption>Paulo Henrique</figcaption>
-        </div>
-        <div class="person">
-          <img class="pessoa" id="p2" src="/imagens/pauloS.PNG">
-          <figcaption>Paulo Sérgio</figcaption>
-        </div>
-        <div class="person">
-          <img class="pessoa" id="p3" src="/imagens/fabio2.png">
-          <figcaption>Fábio Matheus</figcaption>
-        </div>
+  <p class="ne">NOSSA EQUIPE</p>
+
+    <div class="fileira1">
+
+      <div class="person">
+        <img class="pessoa" id="p1" src="/imagens/pauloH.PNG">
+        <figcaption>Paulo Henrique</figcaption>
       </div>
-      <div class="linha2"></div>
-      <div class="fileira2">
-        <div class="person">
-          <img class="pessoa" id="p4" src="/imagens/pessoa.PNG">
-          <figcaption>Sócio 1</figcaption>
-        </div>
-        <div class="person">
-          <img class="pessoa" id="p5" src="/imagens/pessoa.PNG">
-          <figcaption>Sócio 2</figcaption>
-        </div>
-        <div class="person">
-          <img class="pessoa" id="p6" src="/imagens/pessoa.PNG">
-          <figcaption>Sócio 3</figcaption>
-        </div>
+
+      <div class="person">
+        <img class="pessoa" id="p2" src="/imagens/pauloS.PNG">
+        <figcaption>Paulo Sérgio</figcaption>
       </div>
+
+      <div class="person">
+        <img class="pessoa" id="p3" src="/imagens/fabio2.png">
+        <figcaption>Fábio Matheus</figcaption>
+      </div>
+
     </div>
+
+    
+
+    <div class="fileira2">
+
+      <div class="person">
+        <img class="pessoa" id="p4" src="/imagens/pessoa.PNG">
+        <figcaption>Sócio 1</figcaption>
+      </div>
+
+      <div class="person">
+        <img class="pessoa" id="p5" src="/imagens/pessoa.PNG">
+        <figcaption>Sócio 2</figcaption>
+      </div>
+
+      <div class="person">
+        <img class="pessoa" id="p6" src="/imagens/pessoa.PNG">
+        <figcaption>Sócio 3</figcaption>
+      </div>
+    </div>  
   </section>
 
 
@@ -135,13 +143,32 @@
   <div class="linha" id="div3"></div>
 
   <section id="localizacao">
-    <span class="nossoendereco">ENDEREÇO<br><span class="rua"> 📌 R. Leopoldo Macedo, 349 - Ponte Alta, Aparecida - SP, 12570-000</span></span>
+    <h1 class="nossoendereco">ENDEREÇO<br></h1><span class="rua"> 📌 R. Leopoldo Macedo, 349 -<br class="quebra">Ponte Alta,  Aparecida - SP, 12570-000</span>
     <div class="mapBox">
+
       <iframe
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3676.934100160022!2d-45.23376085375232!3d-22.84192749306646!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ccc4851fe439dd%3A0xa5a7026c34e7aa37!2sVIA%20VALE%20SISTEMAS%20CERTIFICADORA!5e0!3m2!1spt-BR!2sbr!4v1691449181343!5m2!1spt-BR!2sbr"
         width="1300" height="750" style="border:0;" allowfullscreen="" loading="lazy"
         referrerpolicy="no-referrer-when-downgrade"></iframe>
+
     </div>
+
+    <div class="mapBoxMedio">
+
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3676.934100160022!2d-45.23376085375232!3d-22.84192749306646!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ccc4851fe439dd%3A0xa5a7026c34e7aa37!2sVIA%20VALE%20SISTEMAS%20CERTIFICADORA!5e0!3m2!1spt-BR!2sbr!4v1691449181343!5m2!1spt-BR!2sbr"
+        width="800" height="550" style="border:0;" allowfullscreen="" loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+    </div>
+
+
+    <div class="mapBoxPequeno">
+
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3676.969446354634!2d-45.23465278873267!3d-22.84061987921542!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ccc4851fe439dd%3A0xa5a7026c34e7aa37!2sVIA%20VALE%20SISTEMAS%20CERTIFICADORA!5e0!3m2!1spt-BR!2sbr!4v1692746473366!5m2!1spt-BR!2sbr" width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+    </div>
+
   </section>
 
 
